<resources>
    <string name="app_name">LongLeg</string>
    <string name="successful">Successful</string>
    <string name="lock_state">Please reset seek bar to change position</string>
    <string name="permisstion">Please accept permission</string>
    <string name="warning">Warning</string>
    <string name="cancel">Cancel</string>
    <string name="OK">OK</string>
    <string name="save_original">Save original</string>
    <string name="resize">Resize</string>
    <string name="exit">Exit</string>
    <string name="saving_image">Saving image please don\'t turn off device</string>
    <string name="jpg">JPG</string>
    <string name="PNG">PNG</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="auto">Auto</string>
</resources>