<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/concer_layout"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/margin_img_original">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_baseline_warning_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/warning"
                android:textColor="@color/primary"
                android:textSize="25sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_img_original"
            android:gravity="center"
            android:text="@string/lock_state"
            android:textSize="20sp"
            android:typeface="normal" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_img_original"
            android:gravity="center_horizontal">

            <FrameLayout
                android:id="@+id/btnOk"
                android:layout_width="120dp"
                android:layout_height="42dp"
                android:layout_marginEnd="@dimen/margin_img_original"
                android:background="@drawable/ripple_button_dialog"
                android:clickable="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/OK"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/btnCancel"
                android:layout_width="120dp"
                android:layout_height="42dp"
                android:layout_toRightOf="@id/btnOk"
                android:background="@drawable/ripple_button_cancel_dialog"
                android:clickable="true">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/cancel"
                    android:textSize="20sp" />
            </FrameLayout>
        </RelativeLayout>
    </LinearLayout>
</layout>